Added 1v1 & 2v2 overlays; Small visual changes

--- a/overlay.html
+++ b/overlay.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
   <script src="//code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-  <!-- <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/smoothness/jquery-ui.css" /> -->
   <link rel="stylesheet" href="./jquery-ui/jquery-ui.css" />
   <link rel="stylesheet" href="./style.css" />
   <script type="text/javascript" src="./game.js"></script>
@@ -29,6 +28,10 @@
 
     <div class="game-count">Game <span class="game-num">1</span></div>
 
+    <div class="replay">
+      <video id="replay-vid" muted autoplay src="./assets/replay/final2dots_cropped.mp4" width="150px"></video>
+    </div>
+    
     <div class="orange-hdr"> <!-- Team 1 -->
       <p></p>
     </div>
